--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "guzzlehttp/guzzle": "^6.2"
     },
     "autoload": {
-        "psr-4": { "Aspose": "src/"  }
+        "psr-4": { "Aspose/": "src/"  }
     }
 }
