--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,15 @@
   "require": {
     "guzzlehttp/guzzle": "^6.2"
   },
+  "require-dev": {
+    "phpunit/phpunit": ">=7.5.20"
+  },
   "autoload": {
     "psr-4": {
       "Aspose\\": "src/Aspose/"
     }
+  },
+  "scripts": {
+    "test": "phpunit --testdox tests"
   }
 }
