--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,12 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "^6.2"
+    "guzzlehttp/guzzle": "^6.2",
+    "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=7.5.20"
+    "phpunit/phpunit": ">=7.5.20",
+    "ext-json": "*"
   },
   "autoload": {
     "psr-4": {
