--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,7 @@
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=7.5.20",
-    "ext-json": "*"
+    "phpunit/phpunit": ">=7.5.20"
   },
   "autoload": {
     "psr-4": {
