--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,4 +31,6 @@ jobs:
       run: composer install --prefer-dist --no-progress --no-suggest
 
     - name: Run test suite
+      env:
+        TEST_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
       run: composer run-script test
