--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": ">=7.5.20",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "friendsofphp/php-cs-fixer": ">=2.16"
   },
   "autoload": {
     "psr-4": {
