--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,47 @@
   "name": "aspose/barcode-cloud-php",
   "description": "Aspose.BarCode for Cloud is a REST API for Linear, 2D and postal barcode generation and recognition in the cloud. API recognizes and generates barcode images in a variety of formats. Barcode REST API allows to specify barcode image attributes like image width, height, border style and output image format in order to customize the generation process. Developers can also specify the barcode type and text attributes such as text location and font styles in order to suit the application requirements.",
   "keywords": [
+    "Barcode-Scan",
+    "QR",
+    "DataMatrix",
+    "Barcode",
+    "AustraliaPost",
+    "VIN",
+    "MSI",
+    "Aztec",
+    "ISBN",
+    "OPC",
+    "Postnet",
+    "2D-Barcode",
+    "EAN13",
+    "ISSN",
+    "PZN",
+    "SingaporePost",
+    "Symbology",
+    "UPCA",
+    "UPCE",
+    "1D-Barcode",
+    "Code11",
+    "Code128",
+    "Code32",
+    "Codetext",
+    "DotCode",
+    "EAN14",
+    "EAN8",
+    "GS1DataMatrix",
+    "Interleaved2of5",
+    "ISMN",
+    "MaxiCode",
+    "OneCode",
+    "Pdf417",
+    "Pharmacode",
+    "Postal-Barcode",
+    "RM4SCC",
+    "SCC14",
+    "SSCC18",
+    "Code39Standard",
+    "GS1QR",
+    "MacroPdf417",
     "JPEG",
     "TIFF",
     "PNG",
@@ -16,15 +57,12 @@
     "Cloud",
     "REST",
     "API",
-    "Barcode",
     "Generate-Barcode",
     "Barcode-Generation",
     "Barcode-Formatting",
     "Format-Barcode",
     "Barcode-Recognition",
     "Recognize-Barcode",
-    "Symbology",
-    "Codetext",
     "CodablockF",
     "Checksum",
     "Optimize-Barcode",
@@ -38,10 +76,6 @@
     "Python",
     "Node.js",
     "Golang",
-    "1D-Barcode",
-    "2D-Barcode",
-    "Postal-Barcode",
-    "Barcode-Scan",
     "Scan-Barcode",
     "barcode",
     "generation",
@@ -49,15 +83,9 @@
     "Alpha-Numeric",
     "AI-8102-Coupon",
     "AustralianPosteParcel",
-    "AustraliaPost",
-    "Aztec",
     "Codabar",
-    "Code11",
-    "Code128",
     "Code16K",
-    "Code32",
     "Code39Extended",
-    "Code39Standard",
     "Code93Extended",
     "Code93Standard",
     "DatabarExpanded",
@@ -68,52 +96,24 @@
     "DatabarStackedOmniDirectional",
     "DatabarTruncated",
     "DataLogic2of5",
-    "DataMatrix",
     "DeutschePostIdentcode",
     "DeutschePostLeitcode",
-    "DotCode",
     "DutchKIX",
-    "EAN13",
-    "EAN14",
-    "EAN8",
     "GS1CodablockF",
     "GS1Code128",
-    "GS1DataMatrix",
-    "GS1QR",
     "IATA2of5",
-    "Interleaved2of5",
-    "ISBN",
-    "ISMN",
-    "ISSN",
     "ItalianPost25",
     "ITF14",
     "ITF6",
-    "MacroPdf417",
     "Matrix2of5",
-    "MaxiCode",
     "MicroPdf417",
     "MICR",
-    "MSI",
-    "OneCode",
-    "OPC",
     "PatchCode",
-    "Pdf417",
-    "Pharmacode",
     "Planet",
-    "Postnet",
-    "PZN",
-    "QR",
-    "RM4SCC",
-    "SCC14",
-    "SingaporePost",
-    "SSCC18",
     "Standard2of5",
     "SwissPostParcel",
-    "UPCA",
     "UpcaGs1Code128Coupon",
-    "UpcaGs1DatabarCoupon",
-    "UPCE",
-    "VIN"
+    "UpcaGs1DatabarCoupon"
   ],
   "license": "MIT",
   "homepage": "https://github.com/aspose-barcode-cloud/aspose-barcode-cloud-php",
