--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['5.3', '7.0', '7.4', '8.0', '8.1']
+        php-versions: ['7.3', '8.0', '8.1']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
