Fixing tests on Windows
Changing to TEST_CONFIGURATION_ACCESS_TOKEN

--- a/.github/workflows/php-composer.yml
+++ b/.github/workflows/php-composer.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: Run test suite
       env:
-        TEST_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
+        TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
       run: composer run-script test
