Fix and add new badge

--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
+        # See: https://www.php.net/supported-versions
         php-versions: ['7.3', '8.0', '8.1']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
