--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,7 @@
     }
   ],
   "require": {
-    "php": "^7.3 || ^8.0",
+    "php": ">=7.3 || >=8.0",
     "guzzlehttp/guzzle": ">=6",
     "ext-json": "*"
   },
