--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,3 +34,6 @@ jobs:
       env:
         TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
       run: composer run-script test
+
+    - name: Run linter
+      run: composer run-script lint
