--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
         # See: https://www.php.net/supported-versions
-        php-versions: ['7.3', '8.0', '8.1']
+        php-versions: ['7.4', '8.0', '8.1', '8.2']
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
