--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -7,7 +7,38 @@ on:
     branches: [ master, main ]
 
 jobs:
-  run:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Validate composer.json and composer.lock
+      run: composer validate
+
+    - name: Cache Composer packages
+      id: composer-cache
+      uses: actions/cache@v2
+      with:
+        path: vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-php-
+
+    - name: Install dependencies
+      if: steps.composer-cache.outputs.cache-hit != 'true'
+      run: composer install --prefer-dist --no-progress --no-suggest
+
+    - name: Run test suite
+      env:
+        TEST_CONFIGURATION_ACCESS_TOKEN: ${{ secrets.TEST_CONFIGURATION_ACCESS_TOKEN }}
+      run: composer run-script test
+
+    - name: Run linter
+      run: composer run-script lint
+
+  test:
+    needs: build
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
