--- a/composer.json
+++ b/composer.json
@@ -125,7 +125,7 @@
     }
   ],
   "require": {
-    "php": ">=7.4 || >=8.0",
+    "php": ">=8.0",
     "guzzlehttp/guzzle": "^7.4",
     "ext-json": "*"
   },
