--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -45,6 +45,8 @@ jobs:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
         # See: https://www.php.net/supported-versions
         php-versions: ['7.4', '8.1', '8.2', '8.3']
+    continue-on-error: true
+
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
     steps:
     - name: Checkout
