--- a/php-cs-fixer.conf
+++ b/php-cs-fixer.conf
@@ -3,5 +3,6 @@
 $config = new PhpCsFixer\Config();
 return $config->setRules([
         '@PSR12' => true,
+        'nullable_type_declaration_for_default_null_value' => true,
     ])
 ;
