--- a/composer.json
+++ b/composer.json
@@ -125,12 +125,12 @@
     }
   ],
   "require": {
-    "php": ">=7.4 || >=8.0",
+    "php": ">=8.0",
     "guzzlehttp/guzzle": "^7.4",
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=7.5.20",
+    "phpunit/phpunit": ">=10.0",
     "friendsofphp/php-cs-fixer": ">=2.16",
     "phpstan/phpstan": "^1.9"
   },
