--- a/.github/workflows/check-badges.yml
+++ b/.github/workflows/check-badges.yml
@@ -2,9 +2,9 @@ name: Check badges in README.md
 
 on:
   push:
-    branches: [ main ]
+    branches: [ v3 ]
   pull_request:
-    branches: [ main ]
+    branches: [ v3 ]
 
 jobs:
   build-and-test:
