--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -2,9 +2,9 @@ name: PHP Versions
 
 on:
   push:
-    branches: [ main ]
+    branches: [ v3 ]
   pull_request:
-    branches: [ main ]
+    branches: [ v3 ]
 
 jobs:
   build:
