Format code snippets

--- a/composer.json
+++ b/composer.json
@@ -140,7 +140,7 @@
     }
   },
   "scripts": {
-    "format": "php-cs-fixer fix index.php src/Aspose/ tests/ --config=php-cs-fixer.conf",
+    "format": "php-cs-fixer fix index.php src/Aspose/ tests/ snippets/ --config=php-cs-fixer.conf",
     "lint": "phpstan analyse index.php src/ tests/ --level=3",
     "test": "phpunit"
   }
