--- a/.github/workflows/php-versions.yml
+++ b/.github/workflows/php-versions.yml
@@ -44,7 +44,7 @@ jobs:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
         # See: https://www.php.net/supported-versions
-        php-versions: [ '8.1', '8.2', '8.3', '8.4' ]
+        php-versions: [ '8.1', '8.2', '8.3', '8.4', '8.5' ]
     continue-on-error: true
 
     name: PHP ${{ matrix.php-versions }} Test on ${{ matrix.operating-system }}
